[package]
name = "rem-cli"
version = "0.2.2"
authors = ["Max Wagner <wagnerm@github.com>"]
edition = "2018"
description = "A CLI tool to help you remember things"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
structopt = "0.3.13"
tempfile = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
